observer_pattern/compiler_error
rm -Rf *.o *.so *.lab
g++ -std=c++11 -Wall \
	-I ./\
	*.cpp -o run.lab
In file included from /usr/include/c++/7/bits/stl_algobase.h:71:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from ./stock.hpp:4,
                 from ./abstract_user.hpp:3,
                 from ./user.hpp:3,
                 from ./server.hpp:3,
                 from server.cpp:2:
/usr/include/c++/7/bits/predefined_ops.h: In instantiation of ‘bool __gnu_cxx::__ops::_Iter_equals_val<_Value>::operator()(_Iterator) [with _Iterator = __gnu_cxx::__normal_iterator<stock*, std::vector<stock> >; _Value = const stock]’:
/usr/include/c++/7/bits/stl_algo.h:120:14:   required from ‘_RandomAccessIterator std::__find_if(_RandomAccessIterator, _RandomAccessIterator, _Predicate, std::random_access_iterator_tag) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<stock*, std::vector<stock> >; _Predicate = __gnu_cxx::__ops::_Iter_equals_val<const stock>]’
/usr/include/c++/7/bits/stl_algo.h:161:23:   required from ‘_Iterator std::__find_if(_Iterator, _Iterator, _Predicate) [with _Iterator = __gnu_cxx::__normal_iterator<stock*, std::vector<stock> >; _Predicate = __gnu_cxx::__ops::_Iter_equals_val<const stock>]’
/usr/include/c++/7/bits/stl_algo.h:3907:28:   required from ‘_IIter std::find(_IIter, _IIter, const _Tp&) [with _IIter = __gnu_cxx::__normal_iterator<stock*, std::vector<stock> >; _Tp = stock]’
server.cpp:65:31:   required from here
/usr/include/c++/7/bits/predefined_ops.h:241:17: error: no match for ‘operator==’ (operand types are ‘stock’ and ‘const stock’)
  { return *__it == _M_value; }
           ~~~~~~^~~~~~~~~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from ./stock.hpp:4,
                 from ./abstract_user.hpp:3,
                 from ./user.hpp:3,
                 from ./server.hpp:3,
                 from server.cpp:2:
/usr/include/c++/7/bits/stl_iterator.h:859:5: note: candidate: template<class _IteratorL, class _IteratorR, class _Container> bool __gnu_cxx::operator==(const __gnu_cxx::__normal_iterator<_IteratorL, _Container>&, const __gnu_cxx::__normal_iterator<_IteratorR, _Container>&)
     operator==(const __normal_iterator<_IteratorL, _Container>& __lhs,
     ^~~~~~~~
/usr/include/c++/7/bits/stl_iterator.h:859:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/7/bits/stl_algobase.h:71:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from ./stock.hpp:4,
                 from ./abstract_user.hpp:3,
                 from ./user.hpp:3,
                 from ./server.hpp:3,
                 from server.cpp:2:
/usr/include/c++/7/bits/predefined_ops.h:241:17: note:   ‘stock’ is not derived from ‘const __gnu_cxx::__normal_iterator<_IteratorL, _Container>’
  { return *__it == _M_value; }
           ~~~~~~^~~~~~~~~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from ./stock.hpp:4,
                 from ./abstract_user.hpp:3,
                 from ./user.hpp:3,
                 from ./server.hpp:3,
                 from server.cpp:2:
/usr/include/c++/7/bits/stl_iterator.h:866:5: note: candidate: template<class _Iterator, class _Container> bool __gnu_cxx::operator==(const __gnu_cxx::__normal_iterator<_Iterator, _Container>&, const __gnu_cxx::__normal_iterator<_Iterator, _Container>&)
     operator==(const __normal_iterator<_Iterator, _Container>& __lhs,
     ^~~~~~~~
/usr/include/c++/7/bits/stl_iterator.h:866:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/7/bits/stl_algobase.h:71:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from ./stock.hpp:4,
                 from ./abstract_user.hpp:3,
                 from ./user.hpp:3,
                 from ./server.hpp:3,
                 from server.cpp:2:
/usr/include/c++/7/bits/predefined_ops.h:241:17: note:   ‘stock’ is not derived from ‘const __gnu_cxx::__normal_iterator<_Iterator, _Container>’
  { return *__it == _M_value; }
           ~~~~~~^~~~~~~~~~~
In file included from /usr/include/x86_64-linux-gnu/c++/7/bits/c++allocator.h:33:0,
                 from /usr/include/c++/7/bits/allocator.h:46,
                 from /usr/include/c++/7/string:41,
                 from /usr/include/c++/7/bits/locale_classes.h:40,
                 from /usr/include/c++/7/bits/ios_base.h:41,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from ./stock.hpp:4,
                 from ./abstract_user.hpp:3,
                 from ./user.hpp:3,
                 from ./server.hpp:3,
                 from server.cpp:2:
/usr/include/c++/7/ext/new_allocator.h:155:5: note: candidate: template<class _Tp> bool __gnu_cxx::operator==(const __gnu_cxx::new_allocator<_Tp>&, const __gnu_cxx::new_allocator<_Tp>&)
     operator==(const new_allocator<_Tp>&, const new_allocator<_Tp>&)
     ^~~~~~~~
/usr/include/c++/7/ext/new_allocator.h:155:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/7/bits/stl_algobase.h:71:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from ./stock.hpp:4,
                 from ./abstract_user.hpp:3,
                 from ./user.hpp:3,
                 from ./server.hpp:3,
                 from server.cpp:2:
/usr/include/c++/7/bits/predefined_ops.h:241:17: note:   ‘stock’ is not derived from ‘const __gnu_cxx::new_allocator<_Tp>’
  { return *__it == _M_value; }
           ~~~~~~^~~~~~~~~~~
user.cpp: In member function ‘void user::remove_country(country)’:
user.cpp:57:31: error: no matching function for call to ‘find(std::vector<country>::iterator, std::vector<country>::iterator, const country&)’
                           code);
                               ^
In file included from /usr/include/c++/7/bits/locale_facets.h:48:0,
                 from /usr/include/c++/7/bits/basic_ios.h:37,
                 from /usr/include/c++/7/ios:44,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from ./stock.hpp:4,
                 from ./abstract_user.hpp:3,
                 from user.cpp:2:
/usr/include/c++/7/bits/streambuf_iterator.h:369:5: note: candidate: template<class _CharT2> typename __gnu_cxx::__enable_if<std::__is_char<_CharT2>::__value, std::istreambuf_iterator<_CharT> >::__type std::find(std::istreambuf_iterator<_CharT>, std::istreambuf_iterator<_CharT>, const _CharT2&)
     find(istreambuf_iterator<_CharT> __first,
     ^~~~
/usr/include/c++/7/bits/streambuf_iterator.h:369:5: note:   template argument deduction/substitution failed:
user.cpp:57:31: note:   ‘__gnu_cxx::__normal_iterator<country*, std::vector<country> >’ is not derived from ‘std::istreambuf_iterator<_CharT>’
                           code);
                               ^
makefile:8: recipe for target 'run.lab' failed
make: *** [run.lab] Error 1
